Fixing yield handling in CasualDiff.